src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__delete_author_ui__delete_author_ui_tests__tests__snapshot_tests__delete_author_step_0_DeleteAuthorToggleDeleteFile.snap
---
source: src/ui/readarr_ui/library/delete_author_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                   ╭─────────────────────  Delete Author  ─────────────────────╮                                                     
                                                   │         Do you really want to delete the author:          │                                                     
                                                   │                       Test Author?                        │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                            ╭───╮                          │                                                     
                                                   │       Delete Author Files: │ ✔ │                          │                                                     
                                                   │                            ╰───╯                          │                                                     
                                                   │                            ╭───╮                          │                                                     
                                                   │        Add List Exclusion: │   │                          │                                                     
                                                   │                            ╰───╯                          │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │╭────────────────────────────╮╭───────────────────────────╮│                                                     
                                                   ││             Yes            ││            No             ││                                                     
                                                   │╰────────────────────────────╯╰───────────────────────────╯│                                                     
                                                   ╰───────────────────────────────────────────────────────────╯
